fix layout issue & add description

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 30px;
-  height: calc(100vh - 200px);
+  height: 100%;
+  min-height: calc(100vh - 200px);
   max-width: 600px;
   margin: 0 auto;
 }
